--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,7 +15,7 @@ jobs:
           usedocker: true
           docker_heroku_process_type: worker
           stack: "container"
-          region: "eu"
+          region: "us"
         env:
           HD_API_ID: ${{secrets.API_ID}}
           HD_API_HASH: ${{secrets.API_HASH}}
